--- a/deno.json
+++ b/deno.json
@@ -1,38 +1,44 @@
 {
-  "version": "0.0.1",
-  "tasks": {
-    "dev": "deno run --watch main.ts",
-    "test": "deno test --allow-read --allow-write --allow-net",
-    "fmt": "deno fmt",
-    "lint": "deno lint"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "@std/cli": "jsr:@std/cli@^1.0.6"
-  },
-  "fmt": {
-    "useTabs": true,
-    "lineWidth": 100,
-    "indentWidth": 2,
-    "semiColons": true,
-    "singleQuote": true,
-    "proseWrap": "always",
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "./node_modules",
-      ".git"
-    ]
-  },
-  "lint": {
-    "rules": {
-      "tags": [
-        "recommended"
-      ]
-    },
-    "include": [
-      "src/**/*.ts"
-    ]
-  }
+	"version": "0.0.1",
+	"tasks": {
+		"dev": "deno run --watch main.ts",
+		"test": "deno test --allow-read --allow-write --allow-net",
+		"fmt": "deno fmt",
+		"lint": "deno lint"
+	},
+	"imports": {
+		"@std/assert": "jsr:@std/assert@1",
+		"@std/cli": "jsr:@std/cli@^1.0.6",
+		"@std/io": "jsr:@std/io@^0.225.0",
+		"ink": "npm:ink@^5.0.1",
+		"ink-big-text": "npm:ink-big-text@^2.0.0",
+		"ink-gradient": "npm:ink-gradient@^3.0.0",
+		"ink-select-input": "npm:ink-select-input@^6.0.0",
+		"react": "npm:react@^18.3.1"
+	},
+	"fmt": {
+		"useTabs": true,
+		"lineWidth": 100,
+		"indentWidth": 2,
+		"semiColons": true,
+		"singleQuote": true,
+		"proseWrap": "always",
+		"include": [
+			"src/**/*.ts"
+		],
+		"exclude": [
+			"./node_modules",
+			".git"
+		]
+	},
+	"lint": {
+		"rules": {
+			"tags": [
+				"recommended"
+			]
+		},
+		"include": [
+			"src/**/*.ts"
+		]
+	}
 }
