--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,7 @@
 		"@std/assert": "jsr:@std/assert@1",
 		"@std/cli": "jsr:@std/cli@^1.0.6",
 		"@std/io": "jsr:@std/io@^0.225.0",
+		"fullscreen-ink": "npm:fullscreen-ink@^0.0.2",
 		"ink": "npm:ink@^5.0.1",
 		"ink-big-text": "npm:ink-big-text@^2.0.0",
 		"ink-gradient": "npm:ink-gradient@^3.0.0",
