--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "lint": "deno lint"
   },
   "imports": {
+    "@inkjs/ui": "npm:@inkjs/ui@^2.0.0",
     "@std/assert": "jsr:@std/assert@1",
     "@std/cli": "jsr:@std/cli@^1.0.6",
     "@std/io": "jsr:@std/io@^0.225.0",
